// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropsTable renders a minimal single row 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-14x80hb-MuiPaper-root-MuiTableContainer-root"
  style={
    {
      "maxHeight": "70vh",
    }
  }
>
  <table
    aria-label="props"
    className="MuiTable-root MuiTable-stickyHeader css-1bhvjkm-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Prop
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Type
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Default
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Examples
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            foo
          </tt>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          string
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          --
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropsTable renders a multiple rows with optional nodes 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-14x80hb-MuiPaper-root-MuiTableContainer-root"
  style={
    {
      "maxHeight": "70vh",
    }
  }
>
  <table
    aria-label="props"
    className="MuiTable-root MuiTable-stickyHeader css-1bhvjkm-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Prop
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Type
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Default
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Examples
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            foo
          </tt>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          string
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <div>
            example node
          </div>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        />
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-5 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            bar
          </tt>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <div>
            type node
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          --
        </td>
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-5 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        >
          <div>
            description node
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropsTable renders a multiple rows with optional strings 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-14x80hb-MuiPaper-root-MuiTableContainer-root"
  style={
    {
      "maxHeight": "70vh",
    }
  }
>
  <table
    aria-label="props"
    className="MuiTable-root MuiTable-stickyHeader css-1bhvjkm-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Prop
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Type
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Default
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Examples
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            foo
          </tt>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          string
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt>
            abc
          </tt>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          --
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        />
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-3 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            bar
          </tt>
          <div
            className="makeStyles-required-4"
          >
            REQUIRED
          </div>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          string
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          "abc", "def"
        </td>
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-3 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        >
          lorem ipsum
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PropsTable renders at full height 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiTableContainer-root css-14x80hb-MuiPaper-root-MuiTableContainer-root"
  style={{}}
>
  <table
    aria-label="props"
    className="MuiTable-root MuiTable-stickyHeader css-1bhvjkm-MuiTable-root"
    role={null}
  >
    <thead
      className="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Prop
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Type
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Default
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-head MuiTableCell-stickyHeader MuiTableCell-sizeMedium css-fzt42r-MuiTableCell-root"
          scope="col"
        >
          Examples
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      role={null}
    >
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            foo
          </tt>
          <div
            className="makeStyles-required-8"
          >
            REQUIRED
          </div>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          string
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          "abc", "def"
        </td>
      </tr>
      <tr
        className="MuiTableRow-root css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        >
          lorem ipsum
        </td>
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-7 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          rowSpan={2}
          scope="row"
        >
          <tt>
            bar
          </tt>
        </th>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <div>
            type node
          </div>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          <tt />
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
        >
          --
        </td>
      </tr>
      <tr
        className="MuiTableRow-root makeStyles-propTableRowGrey-7 css-1egrlw9-MuiTableRow-root"
        role={null}
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-q9jt60-MuiTableCell-root"
          colSpan={4}
        >
          <div>
            description node
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
